--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en-us">
 <head>
 <meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Classic Traveller Character Generator</title>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <link rel="stylesheet" href="travellercharacter.css">
@@ -9,5 +10,12 @@
 </head>
 <body>
 <h1>Classic Traveller Character Generator</h1>
+
+<pre id="travchar"></pre>
+
+<script>
+document.getElementById('travchar').innerHTML = travellerCharacterGenerator('text');
+</script>
+
 </body>
 </html>
