--- a/index.html
+++ b/index.html
@@ -9,12 +9,13 @@
 <script src="travellercharacter.js"></script>
 </head>
 <body>
-<h1>Classic Traveller Character Generator</h1>
 
-<pre id="travchar"></pre>
+<h1 id="noprintheader">Classic Traveller Character Generator</h1>
+
+<div id="travchar"></div>
 
 <script>
-document.getElementById('travchar').innerHTML = travellerCharacterGenerator('text');
+document.getElementById('travchar').innerHTML = travellerCharacter('text');
 </script>
 
 </body>
